--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-plugin-import": "^1.13.0",
+    "dart-sass": "^1.23.7",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
